feat(sanitizer): add yearCaption and tags sanitizers (#1288)