@@ -4,149 +4,115 @@ import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertInstanceOf;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.LinkedHashSet;
+import java.util.List;
+import java.util.Set;
+import java.util.function.BiConsumer;
+import java.util.function.Function;
+import java.util.stream.Stream;
 import org.folio.rest.jaxrs.model.Item;
-import org.junit.jupiter.api.BeforeEach;
+import org.folio.rest.jaxrs.model.Tags;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 
 class ItemSanitizerTest {
 
-  private ItemSanitizer sanitizer;
-
-  @BeforeEach
-  void setUp() {
-    sanitizer = new ItemSanitizer();
-  }
+  private final ItemSanitizer sanitizer = new ItemSanitizer();
 
   @Test
   void sanitizeShouldHandleNullItem() {
     assertDoesNotThrow(() -> sanitizer.sanitize(null));
   }
 
-  @Test
-  void sanitizeShouldCleanAdministrativeNotes() {
+  @ParameterizedTest
+  @MethodSource("administrativeNotesProvider")
+  void sanitizeShouldHandleAdministrativeNotes(List<String> input, List<String> expected) {
     var item = new Item();
-    item.setAdministrativeNotes(Arrays.asList("note1", "", "note2", "  ", "note3"));
-
-    sanitizer.sanitize(item);
-
-    assertEquals(3, item.getAdministrativeNotes().size());
-    assertEquals(Arrays.asList("note1", "note2", "note3"), item.getAdministrativeNotes());
-  }
-
-  @Test
-  void sanitizeShouldHandleNullAdministrativeNotes() {
-    var item = new Item();
-    item.setAdministrativeNotes(null);
+    item.setAdministrativeNotes(input);
 
     sanitizer.sanitize(item);
 
     assertNotNull(item.getAdministrativeNotes());
-    assertTrue(item.getAdministrativeNotes().isEmpty());
+    if (expected.isEmpty()) {
+      assertTrue(item.getAdministrativeNotes().isEmpty());
+    } else {
+      assertEquals(expected, item.getAdministrativeNotes());
+    }
   }
 
-  @Test
-  void sanitizeShouldHandleEmptyAdministrativeNotes() {
+  @ParameterizedTest
+  @MethodSource("setFieldsProvider")
+  void sanitizeShouldCleanSetFields(BiConsumer<Item, Set<String>> setter,
+                                    Function<Item, Set<String>> getter,
+                                    Set<String> input,
+                                    List<String> expectedValues) {
     var item = new Item();
-    item.setAdministrativeNotes(new ArrayList<>());
+    setter.accept(item, input);
 
     sanitizer.sanitize(item);
 
-    assertNotNull(item.getAdministrativeNotes());
-    assertTrue(item.getAdministrativeNotes().isEmpty());
+    assertNotNull(getter.apply(item));
+    if (expectedValues.isEmpty()) {
+      assertTrue(getter.apply(item).isEmpty());
+    } else {
+      assertEquals(expectedValues.size(), getter.apply(item).size());
+      expectedValues.forEach(value -> assertTrue(getter.apply(item).contains(value)));
+    }
   }
 
-  @Test
-  void sanitizeShouldFilterOutWhitespaceOnlyAdministrativeNotes() {
+  @ParameterizedTest
+  @MethodSource("setFieldsNullProvider")
+  void sanitizeShouldHandleNullSetFields(BiConsumer<Item, Set<String>> setter,
+                                         Function<Item, Set<String>> getter) {
     var item = new Item();
-    item.setAdministrativeNotes(Arrays.asList("valid note", "\t", "\n", "   "));
+    setter.accept(item, null);
 
     sanitizer.sanitize(item);
 
-    assertEquals(1, item.getAdministrativeNotes().size());
-    assertEquals("valid note", item.getAdministrativeNotes().getFirst());
+    assertNotNull(getter.apply(item));
+    assertTrue(getter.apply(item).isEmpty());
   }
 
   @Test
-  void sanitizeShouldCleanStatisticalCodeIds() {
+  void sanitizeShouldCleanAllFieldsSimultaneously() {
     var item = new Item();
-    item.setStatisticalCodeIds(new LinkedHashSet<>(Arrays.asList("code1", "", "code2", "  ", "code3")));
-
-    sanitizer.sanitize(item);
-
-    assertEquals(3, item.getStatisticalCodeIds().size());
-    assertTrue(item.getStatisticalCodeIds().contains("code1"));
-    assertTrue(item.getStatisticalCodeIds().contains("code2"));
-    assertTrue(item.getStatisticalCodeIds().contains("code3"));
-  }
-
-  @Test
-  void sanitizeShouldHandleNullStatisticalCodeIds() {
-    var item = new Item();
-    item.setStatisticalCodeIds(null);
-
-    sanitizer.sanitize(item);
-
-    assertNotNull(item.getStatisticalCodeIds());
-    assertTrue(item.getStatisticalCodeIds().isEmpty());
-  }
-
-  @Test
-  void sanitizeShouldHandleEmptyStatisticalCodeIds() {
-    var item = new Item();
-    item.setStatisticalCodeIds(new LinkedHashSet<>());
-
-    sanitizer.sanitize(item);
-
-    assertNotNull(item.getStatisticalCodeIds());
-    assertTrue(item.getStatisticalCodeIds().isEmpty());
-  }
-
-  @Test
-  void sanitizeShouldFilterOutWhitespaceOnlyStatisticalCodeIds() {
-    Item item = new Item();
-    item.setStatisticalCodeIds(new LinkedHashSet<>(Arrays.asList("valid-code", "   ", "\t", "\n")));
-
-    sanitizer.sanitize(item);
-
-    assertEquals(1, item.getStatisticalCodeIds().size());
-    assertTrue(item.getStatisticalCodeIds().contains("valid-code"));
-  }
-
-  @Test
-  void sanitizeShouldCleanBothFieldsSimultaneously() {
-    var item = new Item();
-    item.setAdministrativeNotes(Arrays.asList("note1", "", "note2", "  "));
-    item.setStatisticalCodeIds(new LinkedHashSet<>(Arrays.asList("code1", "", "code2")));
+    item.setAdministrativeNotes(List.of("note1", "", "note2", "  "));
+    item.setStatisticalCodeIds(new LinkedHashSet<>(List.of("code1", "", "code2")));
+    item.setYearCaption(new LinkedHashSet<>(List.of("code1", "", "code2")));
 
     sanitizer.sanitize(item);
 
     assertEquals(2, item.getAdministrativeNotes().size());
-    assertEquals(Arrays.asList("note1", "note2"), item.getAdministrativeNotes());
+    assertEquals(List.of("note1", "note2"), item.getAdministrativeNotes());
     assertEquals(2, item.getStatisticalCodeIds().size());
     assertTrue(item.getStatisticalCodeIds().contains("code1"));
     assertTrue(item.getStatisticalCodeIds().contains("code2"));
+    assertEquals(2, item.getYearCaption().size());
+    assertTrue(item.getYearCaption().contains("code1"));
+    assertTrue(item.getYearCaption().contains("code2"));
   }
 
   @Test
   void sanitizeShouldPreserveOrderInAdministrativeNotes() {
     var item = new Item();
-    var notes = new ArrayList<>(Arrays.asList("first", "", "second", "  ", "third"));
+    var notes = new ArrayList<>(List.of("first", "", "second", "  ", "third"));
     item.setAdministrativeNotes(notes);
 
     sanitizer.sanitize(item);
 
-    assertEquals(Arrays.asList("first", "second", "third"), item.getAdministrativeNotes());
+    assertEquals(List.of("first", "second", "third"), item.getAdministrativeNotes());
   }
 
   @Test
   void sanitizeShouldPreserveOrderInStatisticalCodeIds() {
     var item = new Item();
-    var codes = new LinkedHashSet<>(Arrays.asList("code1", "", "code2", "  ", "code3"));
+    var codes = new LinkedHashSet<>(List.of("code1", "", "code2", "  ", "code3"));
     item.setStatisticalCodeIds(codes);
 
     sanitizer.sanitize(item);
@@ -161,8 +127,8 @@ class ItemSanitizerTest {
   @Test
   void sanitizeShouldHandleAllBlankValues() {
     var item = new Item();
-    item.setAdministrativeNotes(Arrays.asList("", "  ", "\t", "\n"));
-    item.setStatisticalCodeIds(new LinkedHashSet<>(Arrays.asList("", "  ", "\t")));
+    item.setAdministrativeNotes(List.of("", "  ", "\t", "\n"));
+    item.setStatisticalCodeIds(new LinkedHashSet<>(List.of("", "  ", "\t")));
 
     sanitizer.sanitize(item);
 
@@ -173,10 +139,190 @@ class ItemSanitizerTest {
   @Test
   void sanitizeShouldReturnLinkedHashSetForStatisticalCodeIds() {
     Item item = new Item();
-    item.setStatisticalCodeIds(new LinkedHashSet<>(Arrays.asList("code1", "code2")));
+    item.setStatisticalCodeIds(new LinkedHashSet<>(List.of("code1", "code2")));
 
     sanitizer.sanitize(item);
 
     assertInstanceOf(LinkedHashSet.class, item.getStatisticalCodeIds());
+  }
+
+  @ParameterizedTest
+  @MethodSource("tagsProvider")
+  void sanitizeShouldHandleTags(Tags tags, Integer expectedSize, List<String> expectedValues) {
+    var item = new Item();
+    item.setTags(tags);
+
+    sanitizer.sanitize(item);
+
+    if (expectedSize == null) {
+      assertNull(item.getTags());
+    } else {
+      assertNotNull(item.getTags());
+      if (expectedSize == 0) {
+        assertTrue(item.getTags().getTagList().isEmpty());
+      } else {
+        assertEquals(expectedSize, item.getTags().getTagList().size());
+        assertEquals(expectedValues, item.getTags().getTagList());
+      }
+    }
+  }
+
+  @Test
+  void sanitizeShouldCleanAllFieldsIncludingTags() {
+    var item = new Item();
+    item.setAdministrativeNotes(List.of("note1", "", "note2", "  "));
+    item.setStatisticalCodeIds(new LinkedHashSet<>(List.of("code1", "", "code2")));
+    item.setYearCaption(new LinkedHashSet<>(List.of("code1", "", "code2")));
+
+    var tags = new Tags();
+    tags.setTagList(List.of("tag1", "", "tag2", "  "));
+    item.setTags(tags);
+
+    sanitizer.sanitize(item);
+
+    assertEquals(2, item.getAdministrativeNotes().size());
+    assertEquals(2, item.getStatisticalCodeIds().size());
+    assertEquals(2, item.getYearCaption().size());
+    assertEquals(2, item.getTags().getTagList().size());
+    assertEquals(List.of("tag1", "tag2"), item.getTags().getTagList());
+  }
+
+  private static Stream<Arguments> administrativeNotesProvider() {
+    return Stream.of(
+      Arguments.of(List.of("note1", "", "note2", "  ", "note3"), List.of("note1", "note2", "note3")),
+      Arguments.of(null, List.of()),
+      Arguments.of(new ArrayList<>(), List.of()),
+      Arguments.of(List.of("valid note", "\t", "\n", "   "), List.of("valid note"))
+    );
+  }
+
+  private static Stream<Arguments> setFieldsProvider() {
+    return Stream.of(
+      statisticalCodeIdsArg1(),
+      statisticalCodeIdsArg2(),
+      statisticalCodeIdsArg3(),
+      yearCaptionArg1(),
+      yearCaptionArg2(),
+      yearCaptionArg3(),
+      formerIdsArg1(),
+      formerIdsArg2(),
+      formerIdsArg3()
+    );
+  }
+
+  private static Arguments statisticalCodeIdsArg1() {
+    return Arguments.of(
+      (BiConsumer<Item, Set<String>>) Item::setStatisticalCodeIds,
+      (Function<Item, Set<String>>) Item::getStatisticalCodeIds,
+      new LinkedHashSet<>(List.of("code1", "", "code2", "  ", "code3")),
+      List.of("code1", "code2", "code3")
+    );
+  }
+
+  private static Arguments statisticalCodeIdsArg2() {
+    return Arguments.of(
+      (BiConsumer<Item, Set<String>>) Item::setStatisticalCodeIds,
+      (Function<Item, Set<String>>) Item::getStatisticalCodeIds,
+      new LinkedHashSet<>(),
+      List.of()
+    );
+  }
+
+  private static Arguments statisticalCodeIdsArg3() {
+    return Arguments.of(
+      (BiConsumer<Item, Set<String>>) Item::setStatisticalCodeIds,
+      (Function<Item, Set<String>>) Item::getStatisticalCodeIds,
+      new LinkedHashSet<>(List.of("valid-code", "   ", "\t", "\n")),
+      List.of("valid-code")
+    );
+  }
+
+  private static Arguments yearCaptionArg1() {
+    return Arguments.of(
+      (BiConsumer<Item, Set<String>>) Item::setYearCaption,
+      (Function<Item, Set<String>>) Item::getYearCaption,
+      new LinkedHashSet<>(List.of("code1", "", "code2", "  ", "code3")),
+      List.of("code1", "code2", "code3")
+    );
+  }
+
+  private static Arguments yearCaptionArg2() {
+    return Arguments.of(
+      (BiConsumer<Item, Set<String>>) Item::setYearCaption,
+      (Function<Item, Set<String>>) Item::getYearCaption,
+      new LinkedHashSet<>(),
+      List.of()
+    );
+  }
+
+  private static Arguments yearCaptionArg3() {
+    return Arguments.of(
+      (BiConsumer<Item, Set<String>>) Item::setYearCaption,
+      (Function<Item, Set<String>>) Item::getYearCaption,
+      new LinkedHashSet<>(List.of("valid-code", "   ", "\t", "\n")),
+      List.of("valid-code")
+    );
+  }
+
+  private static Arguments formerIdsArg1() {
+    return Arguments.of(
+      (BiConsumer<Item, Set<String>>) Item::setFormerIds,
+      (Function<Item, Set<String>>) Item::getFormerIds,
+      new LinkedHashSet<>(List.of("code1", "", "code2", "  ", "code3")),
+      List.of("code1", "code2", "code3")
+    );
+  }
+
+  private static Arguments formerIdsArg2() {
+    return Arguments.of(
+      (BiConsumer<Item, Set<String>>) Item::setFormerIds,
+      (Function<Item, Set<String>>) Item::getFormerIds,
+      new LinkedHashSet<>(),
+      List.of()
+    );
+  }
+
+  private static Arguments formerIdsArg3() {
+    return Arguments.of(
+      (BiConsumer<Item, Set<String>>) Item::setFormerIds,
+      (Function<Item, Set<String>>) Item::getFormerIds,
+      new LinkedHashSet<>(List.of("valid-code", "   ", "\t", "\n")),
+      List.of("valid-code")
+    );
+  }
+
+  private static Stream<Arguments> setFieldsNullProvider() {
+    return Stream.of(
+      Arguments.of(
+        (BiConsumer<Item, Set<String>>) Item::setStatisticalCodeIds,
+        (Function<Item, Set<String>>) Item::getStatisticalCodeIds
+      ),
+      Arguments.of(
+        (BiConsumer<Item, Set<String>>) Item::setYearCaption,
+        (Function<Item, Set<String>>) Item::getYearCaption
+      )
+    );
+  }
+
+  private static Stream<Arguments> tagsProvider() {
+    var tags1 = new Tags();
+    tags1.setTagList(List.of("tag1", "", "tag2", "  ", "tag3"));
+
+    var tags2 = new Tags();
+    tags2.setTagList(null);
+
+    var tags3 = new Tags();
+    tags3.setTagList(new ArrayList<>());
+
+    var tags4 = new Tags();
+    tags4.setTagList(List.of("valid tag", "\t", "\n", "   "));
+
+    return Stream.of(
+      Arguments.of(tags1, 3, List.of("tag1", "tag2", "tag3")),
+      Arguments.of(null, null, null),
+      Arguments.of(tags2, 0, null),
+      Arguments.of(tags3, 0, null),
+      Arguments.of(tags4, 1, List.of("valid tag"))
+    );
   }
 }
